...
                                ),
                                controller.selectedPlayerIdx == 0
                                    ? Row(
                                        mainAxisSize: MainAxisSize.min,
                                        children: [
                                          IconButton(
                                              key: const Key('play_button'),
                                              onPressed: controller.isPlaying()
                                                  ? null
                                                  : controller.play,
                                              iconSize: 48.0,
                                              icon:
                                                  const Icon(Icons.play_arrow),
                                              color: Colors.green),
                                          IconButton(
                                              key: const Key('pause_button'),
                                              onPressed: controller.isPlaying()
                                                  ? controller.pause
                                                  : null,
                                              iconSize: 48.0,
                                              icon: const Icon(Icons.pause),
                                              color: Colors.green),
                                          IconButton(
                                              key: const Key('stop_button'),
                                              onPressed:
                                                  controller.isPlaying() ||
                                                          controller.isPaused()
                                                      ? controller.stop
                                                      : null,
                                              iconSize: 48.0,
...
