...
  Widget build(BuildContext context) {
    super.build(context);
    return TabWrapper(
      children: [
        Text(
          isSourceSet ? 'Source is set' : 'Source is not set',
          key: const Key('isSourceSet'),
        ),
        Btn(
          key: const Key('setSource-url-remote-wav-1'),
          txt: 'Remote URL WAV 1 - coins.wav',
          onPressed: () => setSource(UrlSource(_wavUrl1)),
        ),
        Btn(
          key: const Key('setSource-url-remote-wav-2'),
          txt: 'Remote URL WAV 2 - laser.wav',
          onPressed: () => setSource(UrlSource(_wavUrl2)),
...
